[package]
name = "bp-aleph-header-chain"
description = "Types and traits for chains using AlephBFT."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false }
scale-info = { version = "2.6.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

# Bridge dependencies
bp-header-chain = { path = "../header-chain", default-features = false }
bp-runtime = { path = "../runtime", default-features = false }

# Substrate Dependencies

sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
hex = { version = "0.4", optional = true }

# Test dependencies
[dev-dependencies]
bp-test-utils = { path = "../test-utils" }

[features]
default = ["std"]
std = [
	"bp-runtime/std",
	"bp-header-chain/std",
	"codec/std",
	"frame-support/std",
	"hex/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"hex/std"
]
